# Selara_Bot

./: .dockerignore  .env.example  .gitignore  ACTIONS.md  BUGS.md  CHANGELOG.md  CONTRADICTIONS.md  Dockerfile  FUNCTIONAL_GAPS_ANALYSIS.md  IDEAS.md  INSTALLATION.md  MISSING_LOGIC.md  README.md  alembic.ini  docker-compose.yml  generate_actions_md.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy-vps.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_init_core_tables.py  0002_add_engagement_tables.py  0003_add_chat_settings.py  0004_add_mafia_chat_timers.py  0005_add_mafia_reveal_eliminated_role_setting.py  0006_add_announce_subscriptions.py  0007_bot_roles_moderation.py  0008_add_economy_core.py  0009_add_growth_mechanic.py  0010_growth_size_zero_default.py  0011_add_chat_display_naming.py  0012_add_relationships.py  0013_add_actions_18_enabled_setting.py  0014_add_group_text_aliases.py  0021_add_web_panel_auth.py  (+38 more)
docs/: ADMIN_GUIDE.md  USER_GUIDE.md  gacha-subproject-analysis.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  vite.config.ts
gacha/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  gacha.db  pyproject.toml
gacha/alembic/: env.py
gacha/alembic/versions/: 20260314_0001_initial.py  20260314_0002_banner_cooldowns.py  20260314_0003_bigint_user_ids.py  20260319_0004_banner_wallets_and_pull_audit.py
gacha/config/banners/: genshin.json  hsr.json
gacha/src/gacha_service/: config.py  main.py
gacha/src/gacha_service/application/: __init__.py  catalog.py  service.py
gacha/src/gacha_service/domain/: __init__.py  models.py
gacha/src/gacha_service/infrastructure/: __init__.py  backup.py  db.py  models.py  repository.py
gacha/src/gacha_service/web/: __init__.py  api.py
gacha/tests/: test_admin_api.py  test_gacha_banners.py  test_service.py
gacha/tools/: banner_editor.py
tests/: gacha_chances_tool.py  pars_tool.py
(+418 files in other folders)
