[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selara"
version = "0.1.0"
description = "Selara Telegram bot with slash and text command support"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Selara Team" }]
dependencies = [
  "aiogram>=3.13.0,<4",
  "SQLAlchemy>=2.0.35,<3",
  "asyncpg>=0.29.0,<1",
  "psycopg[binary]>=3.2.0,<4",
  "alembic>=1.13.2,<2",
  "pydantic>=2.9.2,<3",
  "pydantic-settings>=2.5.2,<3",
  "matplotlib>=3.8.0,<4",
  "Pillow>=10.4.0,<11",
  "fastapi>=0.115.0,<1",
  "httpx>=0.28.1,<1",
  "uvicorn>=0.34.0,<1",
  "Jinja2>=3.1.4,<4",
  "redis>=5.2.1,<6",
  "openai>=1.30.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
  "pytest-asyncio>=0.24.0,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"selara" = ["images/*.png"]
"selara.presentation" = ["*.json"]
"selara.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: tests with real database",
  "e2e: end-to-end tests",
]
